--- a/src/components/chord.component.css
+++ b/src/components/chord.component.css
@@ -1,7 +1,9 @@
 .chord {
+  transform: translateX(-300px);
   animation-name: slide;
   animation-duration: 5s;
   animation-timing-function: linear;
+  animation-iteration-count: 1;
 }
 
 @keyframes slide {
